# Kubernetes-Chat

./: .dockerignore  .gitignore  Dockerfile.expressapi  Dockerfile.fastapi  README.md  config.txt  nginx-conf.txt
Config/: config.json  docker-container-config.json
ExpressAPI/: index.js  package-lock.json  package.json
ExpressAPI/mods/: connectionManager.js  firebase.js  mongo.js
FastAPI/: requirements.txt  server.py
FastAPI/app/: main.py
FastAPI/app/mods/: connectionManager.py  constants.py  firebase.py  mongo.py
Frontend/: .env  package-lock.json  package.json  vue.config.js
Frontend/public/: index.html  style.css
Frontend/public/fonts/: Demo_Regular.json
Frontend/src/: App.vue
Frontend/src/components/: ChatContainer.vue  ContactList.vue  ContactTile.vue  DesktopHome.vue  Message.vue  MessageDisplay3D.vue  MobileHome.vue
Frontend/src/router/: index.js
Frontend/src/views/: Chat.vue  Home.vue  Signin.vue
Locust/: locust.py
poem_api/: Cargo.toml
poem_api/fireauth/src/: lib.rs
poem_api/src/: main.rs
poem_api/src/connection_manager/: mod.rs
poem_api/src/file_reader/: mod.rs
poem_api/src/functions/: mod.rs  routing.rs  statics.rs
poem_api/src/models/: mod.rs  mongodb_models.rs  request_models.rs  response_models.rs  ws_models.rs
