[package]
name = "poem_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fireauth = { path = "./fireauth"}
poem = { version = "1.3.20", features = ["websocket", "cookie"]}
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.17"
tracing-subscriber = "0.3.9"